# gather-files

./: .fast-format-x.yaml  .gather-files.yaml  AGENTS.md  Cargo.toml  README.md  install.sh  release.toml
.github/workflows/: ci.yml  release.yml
docs/: CNAME  index.html  style.css
src/: clipboard.rs  config.rs  gather.rs  main.rs
