[package]
name = "gather-files"
version = "0.1.4"
edition = "2024"

[[bin]]
name = "gf"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.7", features = ["derive"] }
globset = "0.4.14"
globwalk = "0.9.1"
indexmap = { version = "2.2.6", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.10.1"
